# MaterialTwinWeb

./: .gitignore  .mcp.json  PLAN.md  README.md  checklist.md  context-notes.md
.portal/: manifest.yaml
backend/: mcp_server.py  pyproject.toml
backend/app/: analysis.py  cards.py  config.py  curve_store.py  db.py  fitting.py  ingest.py  insights.py  main.py  models.py  schemas.py  seed.py  sync.py  true_stress.py  unit_systems.py  units.py  viscoelastic.py
backend/app/parsing/: __init__.py  base.py  column_map.py  registry.py  validate.py
backend/app/parsing/config/: column_aliases.yaml
backend/app/parsing/parsers/: __init__.py  generic_csv.py  zwick_textxpert.py
backend/app/routers/: __init__.py  health.py  insights.py  materials.py  properties.py  specimens.py  uploads.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: a72e1f3c8b90_specimen_unique_label.py  c0fac20ef805_initial_schema.py  c7b6cca38dc2_viscoelastic_relax_strain_source_.py  e1a9d40b77c1_test_sqlite_autoincrement.py  f4c2a91d55e0_fix_strain_source_check.py
backend/tests/: conftest.py  test_analysis_accuracy.py  test_api.py  test_config.py  test_ingest.py  test_ingest_units.py  test_insights.py  test_mcp_http.py  test_mcp_meta.py  test_mcp_write.py  test_migrations.py  test_parsing.py  test_phase2.py  test_postgres_compat.py  test_sync.py  test_units.py  test_viscoelastic_seed.py
backend/tests/fixtures/: golden_linear_powerlaw.py
docs/: MCP.md  intro.html  showcase.html
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  record_demo.mjs  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  insights.ts  materials.ts  specimens.ts  tests.ts  uploads.ts
frontend/src/components/: AshbyChart.tsx  ColumnMapper.tsx  FamilyBoxPlot.tsx  FitPanel.tsx  IssuePanel.tsx  PropertyTable.tsx  RegressionRangePicker.tsx  StressStrainChart.tsx  TaxonomyGraph.tsx  UploadDropzone.tsx  ViscoelasticView.tsx
frontend/src/lib/: download.ts  (+5 more)
scripts/drive-sync/: PROJECT.conf  README.md  _common.sh  sync-from-drive.sh  sync-to-drive.sh
(+19 files in other folders)
