[project]
name = "materialtwin-web"
version = "0.1.0"
description = "쯔윅(Zwick) 시험기 원본 데이터로 DB를 구축하고 재료 물성을 구축·관리하는 풀스택 플랫폼. 인장시험부터 시작."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
