[project]
name = "materialtwin-web"
version = "0.1.0"
description = "쯔윅(Zwick) 시험기 원본 데이터로 DB를 구축하고 재료 물성을 구축·관리하는 풀스택 플랫폼. 인장시험부터 시작."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "pyarrow>=15",
    "charset-normalizer>=3",
    "pyyaml>=6",
    "alembic>=1.13",
    # MCP 서버(stdio + 웹앱 /mcp 마운트)와 곡선 PNG 도구(plot_*) 의존성 — SIF 빌드에 포함되어야 함.
    "mcp>=1.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]
# Postgres 전환용(운영). SQLite 개발/테스트엔 불필요.
postgres = ["psycopg[binary]>=3.1"]
# MCP 서버(재료 DB를 MCP 도구로 노출) + 그래프 렌더.
mcp = ["mcp[cli]>=1.2", "matplotlib>=3.8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
